final video generator

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 image_output/
-video_output/
-video_input/
+video_output/*
+video_input/*
 !video_input/deepflow2-static
 !video_input/deepmatching-static
-!make-opt-flow.sh
-!run-deepflow.sh
+!video_input/make-opt-flow.sh
+!video_input/run-deepflow.sh
+!video_output/make-video.sh
+
